--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -6,11 +6,11 @@ BUILD = build
 
 # All source code files
 SRC = main.c\
-src/function.c\
+code.c\
 
 # All test source files
-TEST_SRC = src/function.c\
-test/test_function.c\
+TEST_SRC = code.c\
+test_function.c\
 
 TEST_OUTPUT = $(BUILD)/Test_$(PROJECT_NAME).out
 
